Fixed assignment and nextNodes